# undo-cxx

./: .gitignore  .version.cmake  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: add-policies.cmake  config-base.h.in  cxx-detect-compilers.cmake  cxx-macros.cmake  detect-systems.cmake  dummy-project.cmake  lexer-tools.cmake  options-def.cmake  pkg-mgmt.cmake  prerequisites.cmake  target-dirs.cmake  utils.cmake  version-def.cmake  versions-gen.cmake
docs/: README.md
examples/: CMakeLists.txt  simple-wp.cc
include/: undo_cxx.hh
include/undo_cxx/: undo-common.hh  undo-dbg.hh  undo-def.hh  undo-log.hh  undo-unmgr.hh  undo-util.hh  undo-zcore.hh  undo.hh
include/undo_cxx/detail/: undo-if.hh
tests/: CMakeLists.txt  basic.cc  detects.cc  factory.cc  lambda.cc  partial-curry.cc  type-name.cc  undo-basic.cc  undo.cc
